--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,21 @@
 ---
 import MainLayout from "../layouts/MainLayout.astro";
 import LatestArticlesSection from "../components/LatestArticlesSection.astro";
+import { getLangFromUrl, useTranslations } from "../i18n/utils";
 import "../assets/app.css";
+
+// Système d'internationalisation
+const lang = getLangFromUrl(Astro.url);
+const t = useTranslations(lang);
+
+// Métadonnées de la page
+const pageTitle = t("page.title.home");
+const pageDescription = t("meta.description.home");
 ---
 
-<MainLayout>
+<MainLayout 
+  title={pageTitle}
+  description={pageDescription}
+>
   <LatestArticlesSection />
 </MainLayout>
