--- a/src/components/ArticleHero.astro
+++ b/src/components/ArticleHero.astro
@@ -68,7 +68,7 @@ const formattedDate = pubDate.toLocaleDateString("fr-FR", {
       }
       {
         tag && (
-          <span class="badge badge-secondary badge-outline" data-cy="hero-tag">
+          <span class="badge badge-secondary badge-outline badge-lg" data-cy="hero-tag">
             {tag}
           </span>
         )
