--- a/src/components/LatestArticlesSection.astro
+++ b/src/components/LatestArticlesSection.astro
@@ -97,6 +97,7 @@ const getPostTag = (post: CollectionEntry<"blog">) =>
                 description={post.data.description}
                 heroImage={post.data.heroImage}
                 pubDate={post.data.pubDate}
+                author={post.data.author}
                 category={getPostCategory(post)}
                 tag={getPostTag(post)}
                 slug={post.slug}
